# flip-cpd

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/schemes_paper/: gg-222-rank7-rec-0-0-0-z.npy  gg-222-rank7-rec-0-0-0-z.txt  gg-333-rank23-rec-0-0-0-z.npy  gg-333-rank23-rec-0-0-0-z.txt  gg-444-rank49-rec-0-0-0-z.npy  gg-444-rank49-rec-0-0-0-z.txt  gg-555-rank97-rec-0-0-0-z.npy  gg-555-rank97-rec-0-0-0-z.txt  gt-333-rank17-rec-0-0-0-z.npy  gt-333-rank17-rec-0-0-0-z.txt  gt-333-rank17-rec-3-0-0-q.npy  gt-333-rank17-rec-3-0-0-q.txt  gt-333-rank17-rec-9-0-0-z.npy  gt-333-rank17-rec-9-0-0-z.txt  gt-444-rank34-rec-1-0-0-q.npy  gt-444-rank34-rec-1-0-0-q.txt  gt-444-rank34-rec-4-0-0-z.npy  gt-444-rank34-rec-4-0-0-z.txt  gt-444c-rank26-rec-2-0-0-z-4.npy  gt-444c-rank26-rec-2-0-0-z-4.txt  gt-555-rank63-rec-1-0-0-z.npy  gt-555-rank63-rec-1-0-0-z.txt  gt-555-rank74-rec-6-0-0-q.npy  gt-555-rank74-rec-6-0-0-q.txt  kg-333-rank14-rec-0-0-0-q.npy  kg-333-rank14-rec-0-0-0-q.txt  kg-333-rank15-rec-0-0-0-z.npy  kg-333-rank15-rec-0-0-0-z.txt  kg-444-rank36-rec-0-0-0-q.npy  kg-444-rank36-rec-0-0-0-q.txt  kg-444-rank36-rec-0-0-0-z.npy  kg-444-rank36-rec-0-0-0-z.txt  kg-555-rank70-rec-0-0-0-z.npy  kg-555-rank70-rec-0-0-0-z.txt  kk-222-rank1-rec-0-0-0-z.npy  kk-222-rank1-rec-0-0-0-z.txt  kk-333-rank9-rec-0-0-0-z.npy  (+417 more)
docs/: cli.md  generator.md  generators.md
examples/: README.ipynb  README.md
scripts/: cgenerator.py  generator-c.py  generator-pm.py  generator.py  print_scheme_output.py  requirements.txt
src/: lift.cpp  search.cpp  select.cpp  select_modular.cpp
src/core/: log.h  (+11 more)
